--- a/public/language/en-US/plugins.json
+++ b/public/language/en-US/plugins.json
@@ -1,5 +1,6 @@
 {
 	"desktop_notifications.title": "Desktop Notifications",
+	"desktop_notifications.configuration": "Configure Desktop Notifications",
     "desktop_notifications.message": "<strong>%1</strong> needs your permission to activate desktop notifications. Click here to activate.",
     "desktop_notifications.ignored": "Desktop notifications have been disabled. You can re-enable this via the user profile settings page."
 }
