--- a/public/language/fr/plugin.json
+++ b/public/language/fr/plugin.json
@@ -1,5 +1,6 @@
 {
-    "desktop_notifications.title": "Notification bureau",
-    "desktop_notifications.message": "<strong>%1</strong> a besoin de votre permission pour activier les notifications bureau. Cliquez ici pour les activer.",
-    "desktop_notifications.ignored": "Les notifications bureau ont été désactivées. Vous pouvez les réactiver via les options de votre profil utilisateur."
+    "desktop_notifications.title": "Notifications",
+    "desktop_notifications.configuration": "Configurer les alertes système",
+    "desktop_notifications.message": "<strong>%1</strong> a besoin de votre permission pour activer les notifications système. Cliquez ici pour les activer.",
+    "desktop_notifications.ignored": "Les notifications système ont été désactivées. Vous pouvez les réactiver via les options de votre profil utilisateur."
 }
